Search Result Method

--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
@@ -51,17 +51,21 @@
     <Compile Include="DataTypes\AdminArchive.cs" />
     <Compile Include="DataTypes\AdminDatabase.cs" />
     <Compile Include="DataTypes\Archive.cs" />
+    <Compile Include="DataTypes\ArchiveCount.cs" />
     <Compile Include="DataTypes\ArchiveList.cs" />
     <Compile Include="DataTypes\BasePath.cs" />
     <Compile Include="DataTypes\Database.cs" />
     <Compile Include="DataTypes\DatabaseList.cs" />
     <Compile Include="DataTypes\DBAuth.cs" />
+    <Compile Include="DataTypes\Doc.cs" />
     <Compile Include="DataTypes\Field.cs" />
+    <Compile Include="DataTypes\FieldItem.cs" />
     <Compile Include="DataTypes\GlobalArchiveOptions.cs" />
     <Compile Include="DataTypes\License.cs" />
     <Compile Include="DataTypes\NewAdminArchive.cs" />
     <Compile Include="DataTypes\NewAdminDatabase.cs" />
     <Compile Include="DataTypes\Notification.cs" />
+    <Compile Include="DataTypes\Result.cs" />
     <Compile Include="DataTypes\Search.cs" />
     <Compile Include="DataTypes\SearchDetail.cs" />
     <Compile Include="DataTypes\Views.cs" />
