Continued work on Document methods

--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
@@ -66,9 +66,14 @@
     <Compile Include="DataTypes\DatabaseList.cs" />
     <Compile Include="DataTypes\DBAuth.cs" />
     <Compile Include="DataTypes\Doc.cs" />
+    <Compile Include="DataTypes\DocumentIndexData.cs" />
+    <Compile Include="DataTypes\DocumentIndexFields.cs" />
     <Compile Include="DataTypes\Field.cs" />
     <Compile Include="DataTypes\FieldItem.cs" />
     <Compile Include="DataTypes\File.cs" />
+    <Compile Include="DataTypes\FileDetails.cs" />
+    <Compile Include="DataTypes\FileExport.cs" />
+    <Compile Include="DataTypes\FileField.cs" />
     <Compile Include="DataTypes\GlobalArchiveOptions.cs" />
     <Compile Include="DataTypes\GlobalInboxOptions.cs" />
     <Compile Include="DataTypes\Inbox.cs" />
@@ -81,12 +86,14 @@
     <Compile Include="DataTypes\NewAdminList.cs" />
     <Compile Include="DataTypes\NewAdminSearch.cs" />
     <Compile Include="DataTypes\NewAdminTableField.cs" />
+    <Compile Include="DataTypes\NewFile.cs" />
     <Compile Include="DataTypes\Notification.cs" />
     <Compile Include="DataTypes\Result.cs" />
     <Compile Include="DataTypes\Search.cs" />
     <Compile Include="DataTypes\SearchDetail.cs" />
     <Compile Include="DataTypes\SearchParameter.cs" />
     <Compile Include="DataTypes\Security.cs" />
+    <Compile Include="DataTypes\UploadedFiles.cs" />
     <Compile Include="DataTypes\Views.cs" />
     <Compile Include="DataTypes\ViewValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
