Started work on Administration

--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
@@ -95,6 +95,7 @@
     <Compile Include="DataTypes\Search.cs" />
     <Compile Include="DataTypes\SearchDetail.cs" />
     <Compile Include="DataTypes\SearchParameter.cs" />
+    <Compile Include="DataTypes\SecuredGroup.cs" />
     <Compile Include="DataTypes\Security.cs" />
     <Compile Include="DataTypes\UploadedFiles.cs" />
     <Compile Include="DataTypes\Views.cs" />
