Finished SetArchiveSecurity Method

--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
@@ -61,10 +61,14 @@
     <Compile Include="DataTypes\Archive.cs" />
     <Compile Include="DataTypes\ArchiveCount.cs" />
     <Compile Include="DataTypes\ArchiveList.cs" />
+    <Compile Include="DataTypes\ArchivePermission.cs" />
+    <Compile Include="DataTypes\ArchiveSecurity.cs" />
     <Compile Include="DataTypes\BasePath.cs" />
     <Compile Include="DataTypes\ContentSearch.cs" />
     <Compile Include="DataTypes\Database.cs" />
     <Compile Include="DataTypes\DatabaseList.cs" />
+    <Compile Include="DataTypes\DatabasePermission.cs" />
+    <Compile Include="DataTypes\DatabaseSecurity.cs" />
     <Compile Include="DataTypes\DBAuth.cs" />
     <Compile Include="DataTypes\Doc.cs" />
     <Compile Include="DataTypes\DocumentIndexData.cs" />
@@ -77,6 +81,7 @@
     <Compile Include="DataTypes\FileField.cs" />
     <Compile Include="DataTypes\GlobalArchiveOptions.cs" />
     <Compile Include="DataTypes\GlobalInboxOptions.cs" />
+    <Compile Include="DataTypes\Group.cs" />
     <Compile Include="DataTypes\Inbox.cs" />
     <Compile Include="DataTypes\InboxList.cs" />
     <Compile Include="DataTypes\License.cs" />
@@ -95,11 +100,17 @@
     <Compile Include="DataTypes\Search.cs" />
     <Compile Include="DataTypes\SearchDetail.cs" />
     <Compile Include="DataTypes\SearchParameter.cs" />
+    <Compile Include="DataTypes\SearchPermission.cs" />
+    <Compile Include="DataTypes\SearchProperties.cs" />
     <Compile Include="DataTypes\SearchSecurity.cs" />
+    <Compile Include="DataTypes\SecuredDatabase.cs" />
     <Compile Include="DataTypes\SecuredGroup.cs" />
     <Compile Include="DataTypes\Security.cs" />
     <Compile Include="DataTypes\SecurityNode.cs" />
+    <Compile Include="DataTypes\Target.cs" />
+    <Compile Include="DataTypes\UnsecuredGroup.cs" />
     <Compile Include="DataTypes\UploadedFiles.cs" />
+    <Compile Include="DataTypes\User.cs" />
     <Compile Include="DataTypes\Views.cs" />
     <Compile Include="DataTypes\ViewValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
