--- a/.github/workflows/deploy-to-github-pages.yml
+++ b/.github/workflows/deploy-to-github-pages.yml
@@ -3,6 +3,10 @@ name: Rebuild Documentation
 on:
   release:
     types: [created]
+  push:
+    branches:
+      - master  # Set a branch name to trigger deployment
+  pull_request:
 
   workflow_dispatch:
 
