--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Square9APIHelperLibrary/Square9APIHelperLibrary.nuspec
+Square9APIHelperLibrary/nuget.exe
