--- a/.github/workflows/publish-dev-build.yml
+++ b/.github/workflows/publish-dev-build.yml
@@ -30,6 +30,7 @@ jobs:
         release_name: Dev Release ${{ github.sha }}
         draft: false
         prerelease: true
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload DLL to GitHub Release
       uses: actions/upload-release-asset@v1
@@ -38,3 +39,4 @@ jobs:
         asset_path: ./Square9APIHelperLibrary/bin/Release/Square9APIHelperLibrary.dll  # Replace with your actual .dll file path
         asset_name: Square9APIHelperLibrary.dll  # Replace with your actual .dll file name
         asset_content_type: application/octet-stream
+        token: ${{ secrets.GITHUB_TOKEN }}
