--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.nuspec
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Square9APIHelperLibrary</id>
-    <version>0.0.5.1</version>
+    <version>0.0.5.2</version>
     <title>Square9 API Helper Library</title>
     <authors>Chris Stoll</authors>
     <license type="expression">MIT</license>
@@ -10,7 +10,7 @@
     <icon>images/Square9icon.png</icon>
     <projectUrl>https://github.com/chrisstoll1/Square9APIHelperLibrary</projectUrl>
     <description>This .NET Class Library is intended to provide easy access to the Square9API and its endpoints. Built with RestSharp and Newtonsoft.Json, it includes all necessary methods and classes to exchange information with the Square9API.</description>
-    <releaseNotes>Added Table field helper methods. Fixed bug with downloading archive files</releaseNotes>
+    <releaseNotes>Fixed bug where ImportArchiveDocument would not return indexed docIds</releaseNotes>
     <readme>docs/README.md</readme>
     <copyright>Copyright ©  2023</copyright>
     <tags>Square-9 Square9 HelperLibrary RestSharp Newtonsoft.Json</tags>
