--- a/.github/workflows/publish-dev-build.yml
+++ b/.github/workflows/publish-dev-build.yml
@@ -24,13 +24,19 @@ jobs:
     - name: Build
       run: msbuild /p:Configuration=Release Square9APIHelperLibrary.sln
 
-    - name: Install GitHub CLI
+    - name: Get Release ID
+      id: get_release_id
       run: |
-        choco install gh
-      
+        RELEASE_ID=$(curl --header 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+          --url https://api.github.com/repos/${{ github.repository }}/releases/tags/dev-build \
+          --silent | jq '.id')
+        echo "RELEASE_ID=$RELEASE_ID" >> $GITHUB_ENV
+
     - name: Delete Existing Release
       run: |
-        gh release delete dev-build --yes
+        curl -X DELETE \
+          --header 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+          --url https://api.github.com/repos/${{ github.repository }}/releases/${{ env.RELEASE_ID }}
 
     - name: Create GitHub Release
       id: create_release
