--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.nuspec
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>Square9APIHelperLibrary</id>
-    <version>0.0.5.2</version>
+    <version>0.0.5.3</version>
     <title>Square9 API Helper Library</title>
     <authors>Chris Stoll</authors>
     <license type="expression">MIT</license>
@@ -10,11 +10,11 @@
     <icon>images/Square9icon.png</icon>
     <projectUrl>https://github.com/chrisstoll1/Square9APIHelperLibrary</projectUrl>
     <description>This .NET Class Library is intended to provide easy access to the Square9API and its endpoints. Built with RestSharp and Newtonsoft.Json, it includes all necessary methods and classes to exchange information with the Square9API.</description>
-    <releaseNotes>Fixed bug where ImportArchiveDocument would not return indexed docIds</releaseNotes>
+    <releaseNotes>Added Document History Support</releaseNotes>
     <readme>docs/README.md</readme>
     <copyright>Copyright ©  2023</copyright>
     <tags>Square-9 Square9 HelperLibrary RestSharp Newtonsoft.Json</tags>
-    <repository type="git" url="https://github.com/chrisstoll1/Square9APIHelperLibrary.git" branch="master" commit="3bb7f08e8a10efee3124674b5c4ec8d17f7a0053" />
+    <repository type="git" url="https://github.com/chrisstoll1/Square9APIHelperLibrary.git" branch="master" commit="d4e0c5930ffca49eca58aed5a30b54c2a97646d4" />
     <dependencies>
       <dependency id="Newtonsoft.Json" version="13.0.1" />
       <dependency id="RestSharp" version="106.13.0" />
