--- a/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
+++ b/Square9APIHelperLibrary/Square9APIHelperLibrary.csproj
@@ -108,6 +108,8 @@
     <Compile Include="DataTypes\NewAdvancedLink.cs" />
     <Compile Include="DataTypes\NewFile.cs" />
     <Compile Include="DataTypes\Notification.cs" />
+    <Compile Include="DataTypes\QueryBridgeConnection.cs" />
+    <Compile Include="DataTypes\QueryBridgeRequest.cs" />
     <Compile Include="DataTypes\Queue.cs" />
     <Compile Include="DataTypes\Register.cs" />
     <Compile Include="DataTypes\Registration.cs" />
